# gtk3-study

./: README.md
glib-hello/: CMakeLists.txt
glib-hello/src/app/: CMakeLists.txt  main.c
glib-hello/test/: CMakeLists.txt  glib_hello_test_common.c  glib_hello_test_common.h  glib_hello_test_main.c
gtk3-hello/: CMakeLists.txt  CMakePresets.json
gtk3-hello/src/app/: CMakeLists.txt  main.c
